# pbn-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pbn_client/: __init__.py  auth.py  authors.py  client.py  error_record.py  exceptions.py  identifiers.py  paging.py  statements.py
src/pbn_client/mixins/: publications.py
tests/: test_authors.py  test_error_record.py  test_exceptions_compat.py  test_identifiers.py  test_paging.py  test_publications.py  test_statement_helpers.py
