[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pbn-client"
version = "0.2.1"
description = "Framework-independent client for the Polish Bibliography Network API"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Michał Pasternak", email = "michal.dtz@gmail.com" },
]
keywords = ["pbn", "bibliography", "polish-bibliography-network", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28,<3",
    "simplejson>=3.19,<5",
]

[project.urls]
Homepage = "https://github.com/iplweb/pbn-client"
Repository = "https://github.com/iplweb/pbn-client"
Issues = "https://github.com/iplweb/pbn-client/issues"

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10",
    "ruff>=0.14,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pbn_client"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
